--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -19,7 +19,7 @@
                         <div class="banner-unit crowdsouced-banner">
                             <img src="/assets/banner/<%= ['connect-with-cloud'].sample %>.jpg" alt=""/>
                             <div class="buttons">
-                                <a class="get-started" href="/contact"><span><span>GET STARTED</span></span></a>
+                                <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>GET STARTED</span></span></a>
                                 <a class="learn-more" href="/how-it-works">Or Learn More</a>
                             </div>
                         </div>
